# Server_Client_Chat

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: common.h
src/: client.c  server.c
